--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -29,7 +29,7 @@ executable frontend
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base, relude, text, common, reflex-dom
+    build-depends:    base, relude, containers, lens, ghcjs-dom, text, time, common, reflex-dom
     hs-source-dirs:   app
     default-language: Haskell2010
     default-extensions:
