--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -25,7 +25,8 @@ executable frontend
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+        GHCJS
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
