--- a/common/common.cabal
+++ b/common/common.cabal
@@ -27,7 +27,7 @@ library
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base, relude, text
+    build-depends:    base, relude, text, time
     hs-source-dirs:   src
     default-language: Haskell2010
     default-extensions:
