--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -27,10 +27,11 @@ executable frontend
     -- Modules included in this executable, other than Main.
     other-modules:
         GHCJS
+        JSFFI
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base, relude, containers, lens, ghcjs-dom, text, time, common, reflex-dom
+    build-depends:    base, relude, containers, lens, ghcjs-dom, text, time, common, reflex-dom, reflex-dom-contrib
     hs-source-dirs:   app
     default-language: Haskell2010
     default-extensions:
