--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "reflex-platform"]
 	path = reflex-platform
 	url = https://github.com/reflex-frp/reflex-platform
+[submodule "reflex-dom-contrib"]
+	path = reflex-dom-contrib
+	url = https://github.com/reflex-frp/reflex-dom-contrib
