--- a/todo-backend/todo-backend.cabal
+++ b/todo-backend/todo-backend.cabal
@@ -1,34 +1,36 @@
 cabal-version:      2.4
-name:               common
+name:               todo-backend
 version:            0.1.0.0
-synopsis:
+
+-- A short (one-line) description of the package.
+-- synopsis:
 
 -- A longer description of the package.
 -- description:
-homepage:
 
 -- A URL where users can report bugs.
 -- bug-reports:
-license:            BSD-2-Clause
-license-file:       LICENSE
+
+-- The license under which the package is released.
+-- license:
 author:             Torsten Kemps-Benedix
 maintainer:         torsten.kemps-benedix@conzone.net
 
 -- A copyright notice.
 -- copyright:
-category:           Web
+-- category:
 extra-source-files: CHANGELOG.md
 
-library
-    exposed-modules:  Common
+executable todo-backend
+    main-is:          Main.hs
 
-    -- Modules included in this library but not exported.
+    -- Modules included in this executable, other than Main.
     -- other-modules:
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base, relude, text, time
-    hs-source-dirs:   src
+    build-depends:    base, relude, text, todo-common, reflex-dom
+    hs-source-dirs:   app
     default-language: Haskell2010
     default-extensions:
         BangPatterns
