--- a/todo-frontend/todo-frontend.cabal
+++ b/todo-frontend/todo-frontend.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               backend
+name:               todo-frontend
 version:            0.1.0.0
 
 -- A short (one-line) description of the package.
@@ -21,15 +21,17 @@ maintainer:         torsten.kemps-benedix@conzone.net
 -- category:
 extra-source-files: CHANGELOG.md
 
-executable backend
+executable todo-frontend
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+        GHCJS
+        JSFFI
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base, relude, text, common, reflex-dom
+    build-depends:    base, relude, containers, lens, ghcjs-dom, text, time, todo-common, reflex-dom, reflex-dom-contrib
     hs-source-dirs:   app
     default-language: Haskell2010
     default-extensions:
